<resources>
    <string name="app_name">TempToday</string>
    <string name="city_country">Bangalore, India</string>
    <string name="date_today">Saturday, 10 November</string>
    <string name="current_temperature">26</string>
    <string name="weather_information">Partly Cloud</string>
    <string name="wind_speed">1 km/h</string>
    <string name="humidity_rate">60%</string>
    <string name="day_of_week">Mon</string>
    <string name="permission_notice">This permission is important but you can as well set your location on Location page</string>
    <string name="kmph">km/h</string>
    <string name="percentSign">%</string>
    <string name="Cancel">Cancel</string>
    <string name="positiveMessage">Goto Settings Page To Enable GPS</string>
    <string name="alertMessage">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Sun">Sun</string>
    <string name="cityName">City Name</string>
    <string name="sharedPrefName">tempSharedref</string>
    <string name="lattitude">lattitude</string>
    <string name="cityname">cityname</string>
    <string name="longitude">longitude</string>
    <string name="isFirstRun">isFirstRun</string>
    <string name="createdBy">Created By:\n Balvir Jha</string>
    <string name="temparature">%1$s <sup><small>°</small></sup><sub><big>C</big></sub></string>
</resources>
