<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.inducesmile.temptoday.views.WeatherActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/city_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/city_country"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_24sdp" />

            <TextView
                android:id="@+id/current_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/date_today"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp" />

            <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_24sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/sun" />

            <com.github.pavlospt.CircleView
                android:id="@+id/weather_result"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_8sdp"
                app:cv_backgroundColorValue="@color/colorCircleStroke"
                app:cv_fillColor="@color/colorBackground"
                app:cv_strokeColorValue="@color/colorCircleStroke"
                app:cv_subtitleSize="@dimen/_12sdp"
                app:cv_subtitleText="@string/weather_information"
                app:cv_titleColor="@color/colorWhite"
                app:cv_titleSize="@dimen/_50sdp"
                app:cv_titleSubtitleSpace="40"
                app:cv_titleText="@string/current_temperature" />

            <RelativeLayout
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_12sdp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/wind" />

                    <TextView
                        android:id="@+id/wind_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/wind_speed"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_20sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/humidity" />

                    <TextView
                        android:id="@+id/humidity_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/humidity_rate"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_20sdp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:src="@drawable/add" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:visibility="visible">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/weather_daily_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:scrollbars="none" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
